<resources>
    <string name="app_name">Ataulfo</string>
    <string name="Información">information about the study center</string>
    <string name="ESO">GCSE</string>
    <string name="Bachillerato">A-levels</string>
    <string name="FormacionProfesional">Vocational Training</string>
    <string name="DireccionCentro">Address:</string>
    <string name="EscuelaSecundariaCAstro">Secondary school in Castro Urdiales</string>
    <string name="Localidad">Location:</string>
    <string name="Provincia">Province:</string>
    <string name="SitioWeb">Website</string>
    <string name="ComoLlegar">How to get</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="numerotlf"><u>942 86 06 37</u></string>
    <string name="curriculum">Classroom curriculum</string>
    <string name="areasomateriascomunes">Common subjects</string>
    <string name="horas">Hours</string>
    <string name="MasInfromacion">More information...</string>
    <string name="primeroeso">1º GCSE</string>
    <string name="segundoeso">2º GCSE</string>
    <string name="terceroeso">3º GCSE</string>
    <string name="cuartoeso">4º GCSE</string>
    <string name="primerobachiller">1º A-level</string>
    <string name="segundobachiller">2º A-level</string>
    <string name="cocina">Kitchen and catering</string>
    <string name="smr">MSN : Microcomputer systems and networks</string>
    <string name="dam">CAD: Cross-platform application development</string>
    <string name="daw">WAD: Web applications development</string>
</resources>