<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FP" >


    <ImageView
        android:id="@+id/imgLogo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="233dp"
        app:srcCompat="@drawable/cropped_nuevaimagen_2" />

    <Button
        android:id="@+id/btnCocina"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_below="@+id/imgLogo3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="cocina"
        android:text="@string/cocina" />

    <Button
        android:id="@+id/btnSMR"
        android:layout_width="219dp"
        android:layout_height="70dp"
        android:layout_below="@+id/btnCocina"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="smr"
        android:text="@string/smr" />

    <Button
        android:id="@+id/btnDAM"
        android:layout_width="219dp"
        android:layout_height="70dp"
        android:layout_below="@+id/btnSMR"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="dam"
        android:text="@string/dam" />

    <Button
        android:id="@+id/btnDAW"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_below="@+id/btnDAM"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="daw"
        android:text="@string/daw" />


</RelativeLayout>