<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".eso">

    <ImageView
        android:id="@+id/imgLogo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="233dp"
        app:srcCompat="@drawable/cropped_nuevaimagen_2" />

    <Button
        android:id="@+id/btnPrimero"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_below="@+id/imgLogo3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="primeroESO"
        android:text="@string/primeroeso" />

    <Button
        android:id="@+id/btnSegundo"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_below="@+id/btnPrimero"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="segundoESO"
        android:text="@string/segundoeso" />

    <Button
        android:id="@+id/btnTercero"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_below="@+id/btnSegundo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="terceroESO"
        android:text="@string/terceroeso" />

    <Button
        android:id="@+id/btnCuarto"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:layout_below="@+id/btnTercero"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/style_border_editext"
        android:backgroundTint="@color/Rojo"
        android:fontFamily="@font/audiowide"
        android:onClick="cuaroESO"
        android:text="@string/cuartoeso" />


</RelativeLayout>